<resources>
    <string name="app_name">Playlist maker</string>
    <string name="question">Рейтинг этого фильма больше, чем 9?</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделится приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <string name="input_hint">Поиск</string>
</resources>