<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:layout_gravity="start"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/ys_display_medium"/>

    <Button
        android:id="@+id/search"
        app:icon="@drawable/icon_search"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cornerRadius="16dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/media"
        app:icon="@drawable/icon_media"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cornerRadius="16dp"
        android:layout_weight="1"
        android:text="@string/media_library"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/settings"
        app:icon="@drawable/icon_settings"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cornerRadius="16dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"/>

</LinearLayout>
