<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="57dp"
        >
        <ImageView
            android:id="@+id/back_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="45dp"
            android:foreground="?attr/selectableItemBackground"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"

            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        >
        <TextView
            style="@style/SettingsItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:layout_gravity="start|center_vertical"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        >
        <TextView
            style="@style/SettingsItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:layout_gravity="start|center_vertical"/>
        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_share"
            android:layout_gravity="end|center_vertical" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        >
        <TextView
            style="@style/SettingsItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_support"
            android:layout_gravity="start|center_vertical"/>
        <ImageView
            android:id="@+id/support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_face"
            android:layout_gravity="end|center_vertical" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        >
        <TextView
            style="@style/SettingsItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use"
            android:layout_gravity="start|center_vertical"/>
        <ImageView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end|center_vertical" />
    </FrameLayout>
</LinearLayout>